{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 16,
  "lineage": "ae867f69-a26a-ca5c-ba27-817a5636dcd1",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw1",
      "provider": "provider.google-beta",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2020-02-05T07:56:39.843-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/azuredevops-2020/global/firewalls/website-fw-1",
            "name": "website-fw-1",
            "network": "https://www.googleapis.com/compute/v1/projects/azuredevops-2020/global/networks/website-net",
            "priority": 1000,
            "project": "azuredevops-2020",
            "self_link": "https://www.googleapis.com/compute/v1/projects/azuredevops-2020/global/firewalls/website-fw-1",
            "source_ranges": [
              "10.1.2.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw2",
      "provider": "provider.google-beta",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-02-05T07:56:47.270-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/azuredevops-2020/global/firewalls/website-fw-2",
            "name": "website-fw-2",
            "network": "https://www.googleapis.com/compute/v1/projects/azuredevops-2020/global/networks/website-net",
            "priority": 1000,
            "project": "azuredevops-2020",
            "self_link": "https://www.googleapis.com/compute/v1/projects/azuredevops-2020/global/firewalls/website-fw-2",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-ssh"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_firewall.fw1",
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw3",
      "provider": "provider.google-beta",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-02-05T07:56:54.640-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/azuredevops-2020/global/firewalls/website-fw-3",
            "name": "website-fw-3",
            "network": "https://www.googleapis.com/compute/v1/projects/azuredevops-2020/global/networks/website-net",
            "priority": 1000,
            "project": "azuredevops-2020",
            "self_link": "https://www.googleapis.com/compute/v1/projects/azuredevops-2020/global/firewalls/website-fw-3",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "load-balanced-backend"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_firewall.fw1",
            "google_compute_firewall.fw2",
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw4",
      "provider": "provider.google-beta",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "8000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-02-05T07:57:02.047-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/azuredevops-2020/global/firewalls/website-fw-4",
            "name": "website-fw-4",
            "network": "https://www.googleapis.com/compute/v1/projects/azuredevops-2020/global/networks/website-net",
            "priority": 1000,
            "project": "azuredevops-2020",
            "self_link": "https://www.googleapis.com/compute/v1/projects/azuredevops-2020/global/firewalls/website-fw-4",
            "source_ranges": [
              "10.129.0.0/26"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "load-balanced-backend"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_firewall.fw1",
            "google_compute_firewall.fw2",
            "google_compute_firewall.fw3",
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "default",
      "provider": "provider.google-beta",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2020-02-05T07:57:49.542-08:00",
            "id": "projects/azuredevops-2020/regions/us-central1/forwardingRules/website-forwarding-rule",
            "ip_address": "10.1.2.3",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "INTERNAL_MANAGED",
            "name": "website-forwarding-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/azuredevops-2020/global/networks/website-net",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "azuredevops-2020",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/azuredevops-2020/regions/us-central1/forwardingRules/website-forwarding-rule",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/azuredevops-2020/regions/us-central1/subnetworks/website-net-default",
            "target": "https://www.googleapis.com/compute/beta/projects/azuredevops-2020/regions/us-central1/targetHttpProxies/website-proxy"
          },
          "dependencies": [
            "google_compute_firewall.fw1",
            "google_compute_firewall.fw2",
            "google_compute_firewall.fw3",
            "google_compute_firewall.fw4",
            "google_compute_instance_template.instance_template",
            "google_compute_network.default",
            "google_compute_region_backend_service.default",
            "google_compute_region_health_check.default",
            "google_compute_region_instance_group_manager.rigm",
            "google_compute_region_target_http_proxy.default",
            "google_compute_region_url_map.default",
            "google_compute_subnetwork.default",
            "google_compute_subnetwork.proxy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "default",
      "provider": "provider.google-beta",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/azuredevops-2020/global/networks/website-net",
            "name": "website-net",
            "project": "azuredevops-2020",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/azuredevops-2020/global/networks/website-net"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "default",
      "provider": "provider.google-beta",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/azuredevops-2020/regions/us-central1/instanceGroups/rigm-internal",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2020-02-05T07:57:26.683-08:00",
            "fingerprint": "9M_P_OuHDig=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/azuredevops-2020/regions/us-central1/healthChecks/website-hc"
            ],
            "id": "projects/azuredevops-2020/regions/us-central1/backendServices/website-backend",
            "load_balancing_scheme": "INTERNAL_MANAGED",
            "name": "website-backend",
            "project": "azuredevops-2020",
            "protocol": "HTTP",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/azuredevops-2020/regions/us-central1/backendServices/website-backend",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_firewall.fw1",
            "google_compute_firewall.fw2",
            "google_compute_firewall.fw3",
            "google_compute_firewall.fw4",
            "google_compute_instance_template.instance_template",
            "google_compute_network.default",
            "google_compute_region_health_check.default",
            "google_compute_region_instance_group_manager.rigm",
            "google_compute_subnetwork.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_url_map",
      "name": "default",
      "provider": "provider.google-beta",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-02-05T07:57:42.498-08:00",
            "default_service": "https://www.googleapis.com/compute/v1/projects/azuredevops-2020/regions/us-central1/backendServices/website-backend",
            "description": "",
            "fingerprint": "M1iF17QrzNU=",
            "host_rule": [],
            "id": "projects/azuredevops-2020/regions/us-central1/urlMaps/website-map",
            "map_id": 8689271904904108825,
            "name": "website-map",
            "path_matcher": [],
            "project": "azuredevops-2020",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/azuredevops-2020/regions/us-central1/urlMaps/website-map",
            "test": [],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_firewall.fw1",
            "google_compute_firewall.fw2",
            "google_compute_firewall.fw3",
            "google_compute_firewall.fw4",
            "google_compute_instance_template.instance_template",
            "google_compute_network.default",
            "google_compute_region_backend_service.default",
            "google_compute_region_health_check.default",
            "google_compute_region_instance_group_manager.rigm",
            "google_compute_subnetwork.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "default",
      "provider": "provider.google-beta",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-02-05T07:56:40.419-08:00",
            "gateway_address": "10.1.2.1",
            "id": "projects/azuredevops-2020/regions/us-central1/subnetworks/website-net-default",
            "ip_cidr_range": "10.1.2.0/24",
            "name": "website-net-default",
            "network": "https://www.googleapis.com/compute/v1/projects/azuredevops-2020/global/networks/website-net",
            "private_ip_google_access": false,
            "project": "azuredevops-2020",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/azuredevops-2020/regions/us-central1/subnetworks/website-net-default"
          },
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "proxy",
      "provider": "provider.google-beta",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-02-05T07:56:40.068-08:00",
            "gateway_address": "10.129.0.1",
            "id": "projects/azuredevops-2020/regions/us-central1/subnetworks/website-net-proxy",
            "ip_cidr_range": "10.129.0.0/26",
            "name": "website-net-proxy",
            "network": "https://www.googleapis.com/compute/v1/projects/azuredevops-2020/global/networks/website-net",
            "private_ip_google_access": false,
            "project": "azuredevops-2020",
            "purpose": "INTERNAL_HTTPS_LOAD_BALANCER",
            "region": "us-central1",
            "role": "ACTIVE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/azuredevops-2020/regions/us-central1/subnetworks/website-net-proxy"
          },
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    }
  ]
}